fix: comprehensive Rollup native module fix for Vercel
- Force Vite to use JavaScript Rollup instead of native binaries
- Add VITE_ROLLUP_NATIVE=false environment variable
- Install cross-env for cross-platform environment support
- Add build:vercel script with explicit environment variable
- Update vercel.json to use custom build command
- Install specific Rollup version (4.9.0) for compatibility
- Multiple layers of protection against native module issues

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,10 @@
   "rewrites": [
     { "source": "/(.*)", "destination": "/" }
   ],
-  "buildCommand": "npm run build",
+  "buildCommand": "npm run build:vercel",
   "installCommand": "npm install --legacy-peer-deps",
-  "framework": "vite"
+  "framework": "vite",
+  "env": {
+    "VITE_ROLLUP_NATIVE": "false"
+  }
 }
